# pc_manager

./: .bumpversion.cfg  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build-arch.sh  conn.c  conn.h  main.c  release.sh  utils.h
.github/workflows/: cargo.yml  cmake.yml  codeql-analysis.yml  release.yml
install/: CMakeLists.txt  PKGBUILD  PKGBUILD.in  package.wxs  pc_manager.service  windows_service.xml
integration/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  requirements.txt  run.sh  test_integration.py
pc_manager/: CMakeLists.txt
pc_manager/src/: CMakeLists.txt  config.c  config.h  conn.c  conn.h  loop.h  main.c  main.h  utils.h
pc_manager/src/sensors/: sensors.h  time.c
pc_manager/src/tasks/: reboot.c  reboot.h  shutdown.c  shutdown.h  tasks.h
pc_manager/tests/: CMakeLists.txt  system_test.cpp
src/: CMakeLists.txt  conf.c  conf.rs  config.c  conn.c  conn.rs  loop.c  main.c  main.rs  mainloop.rs  sensors.rs  tasks.rs  utils.c  utils.h  winservice.rs
src/inc/: conf.h  conn.h  loop.h  sensors.h  update.h  utils.h  version.h.in
src/sensors/: sensors.h  time.c  time.rs  update.c  update.rs  version.c  version.h.in  version.rs
src/tasks/: reboot.c  reboot.rs  shutdown.c  shutdown.rs  tasks.h  update.c  update.h  update.rs
tests/: CMakeLists.txt  config_test.cpp  system_test.cpp  update.cpp  update_test.cpp
