[package]
name = "pc_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.135"
paho-mqtt = "0.11"
serde_json = "1.0"
hostname = "^0.3"
lazy_static = "1.4.0"
log = "0.4.17"
nix = "0.25.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.22"
regex = "1.6.0"