[package]
name = "pc_manager"
version = "1.17.0"
edition = "2021"
description = "Monitor PC"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Cameron Cross"]

[package.metadata.deb.systemd-units]
unit-scripts = "install"
unit-name = "pc_manager"

[dependencies]
libc = "0.2.135"
paho-mqtt = "0.11"
serde_json = "1.0"
hostname = "^0.3"
lazy_static = "1.4.0"
log = "0.4.17"
nix = "0.25.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.22"
regex = "1.6.0"
cargo-deb = "1.39.3"