[package]
name = "pc_manager"
version = "1.21.0"
edition = "2021"
description = "Monitor PC"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Cameron Cross"]

[package.metadata.deb.systemd-units]
unit-scripts = "install"
unit-name = "pc_manager"

[dependencies]
tokio = "1.21.2"
rumqttc = "0.17.0"
serde_json = "1.0"
hostname = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = "0.4.22"
regex = "1.6.0"
tempdir = "0.3.7"

[target.'cfg(unix)'.dependencies]
cargo-deb = "1.39.3"
nix = "0.25.0"
libc = "0.2.135"
ctrlc = "3.2.3"

[target.'cfg(windows)'.dependencies]
cargo-wix = "0.3.3"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winuser"] }
windows-service = "0.5.0"

[dev-dependencies]
more-asserts = "0.3.1"