if (UNIX)
    add_compile_options(-Wall)
    install(FILES pc_manager.service
            DESTINATION /usr/lib/systemd/system)
    configure_file(PKGBUILD.in ../PKGBUILD @ONLY)
endif()

if (WIN32)
    SET(CPACK_GENERATOR "WIX")
    SET(CPACK_WIX_UPGRADE_GUID b7dfe6eb-0ce0-4de6-b1f9-c03cb5718119)
    SET(CPACK_WIX_PATCH_FILE ${CMAKE_CURRENT_SOURCE_DIR}/windows_service.xml)
elseif (UNIX)
    SET(CPACK_GENERATOR "DEB")
    SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "cc")
endif ()
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Monitor PC")
SET(CPACK_PACKAGE_VENDOR "cc")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/../LICENSE.txt")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../README.md")

INCLUDE(CPack)